--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- About section -->
   <div class="w3-container w3-dark-grey w3-center w3-text-light-grey w3-padding-32" id="about">
     <h4><b>About Me</b></h4>
-    <img src="C:\Users\yuvan\Desktop\sanjay pro\profile.jpeg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
+    <img src="profile.jpeg" alt="Me" class="w3-image w3-padding-32" width="600" height="650">
     <div class="w3-content w3-justify" style="max-width:600px">
       <h4>My Name</h4>
       <p> Hello!. I'm Sanjaykanth.S from Government arts college. I'll finish my degree of B.Sc Computer Science.
